# rust_fullstack_example

./: README.md
backend/: Cargo.toml
backend/src/: error.rs  handler.rs  main.rs
backend/src/db/: mod.rs  owner.rs  pet.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml
